<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:key="profile_category" app:title="@string/settings_names">

        <EditTextPreference
            app:key="user_name"
            app:title="@string/settings_name"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="country"
            app:title="@string/settings_from"
            app:entries="@array/country_entries"
            app:entryValues="@array/country_values"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="user_avatar"
            app:title="@string/settings_avatar"
            app:summary="@string/settings_text_avatar" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_voic">

        <SwitchPreferenceCompat
            app:key="background_music"
            app:title="@string/settings_voiic" />

        <SwitchPreferenceCompat
            app:key="move_sounds"
            app:title="@string/settings_voiicc" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_mode">

        <ListPreference
            app:key="theme"
            app:title="@string/settings_theme"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="system"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="language"
            app:title="@string/settings_lounge"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="board_style"
            app:title="@string/settings_style_dos"
            app:entries="@array/board_style_entries"
            app:entryValues="@array/board_style_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_play_proc">

        <SwitchPreferenceCompat
            app:key="timed_mode"
            app:title="@string/settings_play_time" />

        <SwitchPreferenceCompat
            app:key="show_coordinates"
            app:title="@string/settings_show_coordinates"
            app:summary="Показывать координаты на доске"
            app:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
