<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_register"
        android:contentDescription="@string/background_image_description" />


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_toolbar_title"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/toolbar_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/btnContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_game"
                android:visibility="gone"
                style="@style/Widget.Material3.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNewGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_game"
                android:layout_marginTop="12dp"
                style="@style/Widget.Material3.Button"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_rating"
                android:layout_marginTop="12dp"
                app:layout_constraintWidth_percent="1"
                style="@style/Widget.Material3.Button"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGameHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_history_title"
                android:layout_marginTop="12dp"
                style="@style/Widget.Material3.Button.TonalButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_settings"
                android:layout_marginTop="12dp"
                style="@style/Widget.Material3.Button.TonalButton"/>

        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/stats"

                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvGamesToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_stats"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/tvOnlineNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_stat"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
